--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -13,6 +13,9 @@ date: The date on which the measurement was taken in YYYY-MM-DD format
 interval: Identifier for the 5-minute interval in which measurement was taken
 
 In order to proceed as mentioned in the assignment,
+
+##Loading and preprocessing the data
+
 Loading the data from given csv pre downloaded to a directory which is also set as the working directory for the given assignment.
 
 ```{r, echo=TRUE}
@@ -20,6 +23,9 @@ Loading the data from given csv pre downloaded to a directory which is also set 
 rawactivity<-read.csv("./activity.csv",stringsAsFactors=FALSE)
 rawactivity[,"date"] <- as.Date(rawactivity[,"date"] ,format='%Y-%m-%d')
 ```
+
+
+##What is mean total number of steps taken per day?
 
 Displaying the required Histogram, mean and median of total number of steps taken
 ```{r, echo=TRUE}
@@ -29,12 +35,13 @@ stepsbyday <- aggregate(steps ~ date, data = rawactivity, FUN = sum, na.rm=TRUE)
 ##plotting the desired histogram
 hist(stepsbyday$steps,breaks=nrow(stepsbyday), main="Number of steps per day", xlab="date" ,ylab="steps",col="red")
 ##calculating the requested mean and median
-meanstep <- round(mean(stepsbyday$steps),3)
+meanstep <- format(round(mean(stepsbyday$steps),3),digits=7,nsmall=3)
 medianstep <- median(stepsbyday$steps)
 ```
 The mean of total number of steps per day is: `r meanstep`  
 The median of number of steps per day is: `r medianstep`
 
+##What is the average daily activity pattern?
 
 Daily activity pattern starts with aggregation of data across all days grouped over intervals, followed by ploting of the line graph showing activity and thus calculating time interval where max number of mean step is being observed
 
@@ -43,12 +50,14 @@ Daily activity pattern starts with aggregation of data across all days grouped o
 vals<-aggregate(steps ~ interval, data = rawactivity, FUN = mean, na.rm=TRUE)
 ## avg number of steps by interval
 ##plot for the above case
-plot(vals$interval,vals$steps,type="l", xlab="Time interval", ylab="Average Number of steps", col="maroon")
+plot(vals$interval,vals$steps,type="l", xlab="Time interval", ylab="Average Number of steps", col="maroon", main="Daily activity Pattern")
 mxstpint<-vals$interval[vals$steps==max(vals$steps)]
 ##calc interval where avg number of steps are max
 ```
 The average number of steps where maximum at `r mxstpint` time interval
 
+
+##Imputing missing values
 
 The process for imputing is :
 first finding the number of NA values
@@ -70,11 +79,11 @@ nstepsbyday <- aggregate(steps ~ date, data = comactivity,FUN = sum, na.rm=TRUE)
 
 hist(nstepsbyday$steps,breaks=nrow(nstepsbyday), main="Number of steps per day", xlab="date" ,ylab="steps",col="orange")
 nvals<-aggregate(steps ~ interval, data = comactivity, FUN = mean, na.rm=TRUE)
-nmeanstep <- round(mean(nstepsbyday$steps),3)
-nmedianstep <- median(nstepsbyday$steps)
+nmeanstep <- format(round(mean(nstepsbyday$steps),3),digits=7,nsmall=3)
+nmedianstep <- format(median(nstepsbyday$steps),digits=7,nsmall=3)
 ```
 
-the total number of NA is `r nNA` with percentage of NA corresponding to given data is `r pcNA`%
+the total number of NA is `r nNA` with percentage of NA corresponding to given data is `r pcNA*100`%
 
 The new mean of total number of steps per day is: `r nmeanstep`  
 The new median of number of steps per day is: `r nmedianstep` 
@@ -82,6 +91,7 @@ The new median of number of steps per day is: `r nmedianstep`
 the difference in value observed is 0.5 step for mean and 3 for median, which can be due to input of new data alongwith the rounding off differences.
 
 
+##Are there differences in activity patterns between weekdays and weekends?
 
 TO plot this graph we had to add new columns to define day of the week and type of day(either weekday or weekend) for ease of the computation
 ```{r,echo=TRUE}
@@ -105,8 +115,8 @@ xyplot(x~interval|dtype, data=aidval, layout=c(1,2), type="l", ylab="Mean of ste
 ##aggregation based on dates for weekdays and weekend
 wdstepsbyday <- aggregate(steps ~ date, data = wdact, FUN = sum, na.rm=TRUE)
 wnstepsbyday <- aggregate(steps ~ date, data = wnact, FUN = sum, na.rm=TRUE)
-wdmeanstep <- round(mean(wdstepsbyday$steps),3)
-wnmeanstep <- mean(wnstepsbyday$steps)
+wdmeanstep <- format(round(mean(wdstepsbyday$steps),3),digits=7,nsmall=3)
+wnmeanstep <- format(mean(wnstepsbyday$steps),digits=7,nsmall=3)
 ```
 
 The mean of total number of steps per weekday is: `r wdmeanstep`
